--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -410,7 +410,7 @@ background-color: Silver;
 <body>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-<h6><span style="color: red;">Dark Api</span></h6>
+<h6><span style="color: red;">Redzin Api</span></h6>
               </div>
                </footer>          
   <!--SIDER BAR A BAIXO--->
@@ -430,12 +430,12 @@ background-color: Silver;
 
 <div class="txt">
 <div class="center-image">
-<a href="#" alt="pedrozz: criador">
+<a href="#" alt="Redzin: criador">
 <img class="round-image" src="https://telegra.ph/file/70b6da147083ab19786e9.jpg" alt="by Pedrozz">
 </a>
 </div>
 <center>
-  <i class="darkin">DARK - API</i>
+  <i class="darkin">REDZIN - API</i>
 </center>
 
 
@@ -472,7 +472,7 @@ background-color: Silver;
   <h2>Configurações do Usuário</h2>
   <br>
   <div class="center-image">
-                        <a href="" alt="pedrozz: criador">
+                        <a href="" alt="Redzin: criador">
                         <img class="round-image" src="<%= currentUser.photoLink %>" alt="by Pedrozz">
                         </a>
   </div>
@@ -557,7 +557,7 @@ background-color: Silver;
               <br></br><br></br><br></br><br></br>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-<h5>Copyright © 2024 <span style="color: red;">Dark Stars</span></h5>
+<h5>Copyright © 2024 <span style="color: red;">REDZIN</span></h5>
               </div>
                </footer>          
                              <script type="text/javascript">
