--- a/views/CHAT.html
+++ b/views/CHAT.html
@@ -135,7 +135,7 @@ color: white;
   </footer>
 <script>
 const textElement = document.getElementById('text');
-const phrases = ['Bem-Vindo.', 'Ainda estamos em desenvolvimento', 'Explore nossas opções.', 'Obrigado por usar nossa api.', 'rest api by dark stars','esplore a sua criatividade na nossa api','estamos sempre trazendo o melhor conteudo para voce'];
+const phrases = ['Bem-Vindo.', 'Em Desenvolvimento'];
 let phraseIndex = 0;
 let letterIndex = 0;
 
