--- a/views/SemKey.html
+++ b/views/SemKey.html
@@ -462,10 +462,10 @@ color: white;
 <body>
              
       <div class="center-image">
-        <a href="/valores" alt="pedrozz: criador">
-        <img class="round-image" src="https://telegra.ph/file/980cea6cb4f8e5a55a6ab.jpg" alt="by Pedrozz">
+        <a href="/valores" alt="Redzin: criador">
+        <img class="round-image" src="https://telegra.ph/file/980cea6cb4f8e5a55a6ab.jpg" alt="by Redzin">
         </a>
-        <h3>Laura - Api</h3>
+        <h3>Redzin - Api</h3>
   
         <div id="whatisos" class="content-section">
             <h2 class="section-title"><i class="mdi mdi-cart-check"></i>Comprando o Plano ADM....</h2>
@@ -501,7 +501,7 @@ color: white;
 
               <footer class="footer">
                 <div class="d-sm-flex justify-content-center justify-content-sm-between">
-                <p><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2025 Dark Stars</span></p>
+                <p><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2025 REDZIN API</span></p>
                 </div>
                  </footer>
 
@@ -533,7 +533,7 @@ color: white;
                title: 'Sem key?',
                html: `
                    <i class="mdi mdi-emoticon-cry-outline fa-5x" style="color: #FF0040;"></i><br>
-                   Ola! Compre uma key para poder usar a api! <a href='https://youtube.com/@pedrozz_Mods'>Pedrozz_Mods</a>&nbsp;</p>
+                   Ola! Compre uma key para poder usar a api! <a href='https://instagram/@redzinyz'>Redzin</a>&nbsp;</p>
                `,
                showClass: {
                    popup: 'animate_animated animate_fadeInDown'
