--- a/views/adm.ejs
+++ b/views/adm.ejs
@@ -33,7 +33,7 @@
    <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
-              <title>Dark - api</title>
+              <title>redzin - api</title>
           <style>
             /* Cores do site */
             @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
@@ -985,7 +985,7 @@
               <br></br><br></br><br></br><br></br>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-              <h2><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2024 Adm Dark Stars</span></h2>
+              <h2><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2024 Adm Redzin Api</span></h2>
               </div>
                </footer>
                         <script>
