--- a/views/valor.html
+++ b/views/valor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Dark api</title>
+    <title>REDZIN API</title>
     <meta name="description"content="uma api rest 100% profissional e confiável para os seus negócios, aqui você encontrará diversas apis de diferentes conteúdos."/>
     <link rel="icon" href="https://telegra.ph/file/980cea6cb4f8e5a55a6ab.jpg" type="image/x-icon">
 
@@ -287,7 +287,7 @@ section {
 <body>
 <footer class="footer2">
 <div class="d-sm-flex justify-content-center justify-content-sm-between">
-<h6><span style="color: red;">LOJINHA DARK</span></h6>
+<h6><span style="color: red;">LOJINHA RED</span></h6>
 </div>
 </footer>       
 
@@ -395,7 +395,7 @@ section {
 
   <footer2 class="py-2">
     <div class="container text-muted text-center">
-      <a href="https://youtube.com/@Pedrozz_Mods?si=Ubv-FVOKM81KdcdR" target="_blank">2024 Dark Stars - Todos os direitos reservados</a>
+      <a href="https://instagram/@redzinyz" target="_blank">2024 REDZIN API - Todos os direitos reservados</a>
     </div>
   </footer2>
 
