--- a/views/index.html
+++ b/views/index.html
@@ -565,33 +565,17 @@ CANAL</a>
 <div class="col-md-4" data-aos="fade-up">
 <div class="service p-4 bg-base rounded-4 shadow-effect">
 <div class="iconbox rounded-4">
-<i class="mdi mdi-youtube"></i>
+<i class="mdi mdi-instagram"></i>
 </div>
-<h5 class="mt-4 mb-2">Redxin</h5>
-<p>Se você caminha sozinho, você vai mais rápido Se vocês caminharem juntos, vocês irão mais longe</p>
+<h5 class="mt-4 mb-2">Redzin</h5>
+<p>Faça O Seu Melhor Mesmo Em Fases Ruins.</p>
 <center><a class="btn" href="/valores">
 <span></span>
 <span></span>
 <span></span>
 <span></span>
-Canal
+Instagram
 </a> </center>
-</div>
-</div>
-
-<div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-<div class="service p-4 bg-base rounded-4 shadow-effect">
-<div class="iconbox rounded-4">
-<i class="mdi mdi-youtube"></i>
-</div>
-<h5 class="mt-4 mb-2">Ritinha/Arcanja</h5>
-<p>Primeiro amarás o Corinthians e só assim então poderá amar outro alguém!
-</p>
-<center><a class="btn" href="/valores">
-<span></span>
-<span></span>
-<span></span>
-<span></span>Canal</a> </center>
 </div>
 </div>
 
