--- a/lib/docs.ejs
+++ b/lib/docs.ejs
@@ -278,14 +278,14 @@
               margin: 5px;
             }
 
-            .pedrozz{
+            .Redzin{
             color: black;
             }
-            .pedrozz2{
+            .Redzin2{
             color: #000000;
 
             }
-            .pedrozz3{
+            .Redzin3{
             color: #000000;
 
             }
@@ -734,8 +734,8 @@ font-size: 22px;
 <div class="txt">
 <!----
 <div class="sidercenter">
-<a href="#" alt="pedrozz: criador">
-<img class="round-image" src="https://j.top4top.io/p_3068vk6ci0.gif" alt="by Pedrozz">
+<a href="#" alt="Redzin: criador">
+<img class="round-image" src="https://j.top4top.io/p_3068vk6ci0.gif" alt="by Redzin">
 </a>
 </div>
 ----->
@@ -750,10 +750,10 @@ font-size: 22px;
 <a class="sub-btn"><i class='fa fa-download'></i>DOWLOADS<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 
-<a class="mdi mdi-youtube" target="_blank" href="/download/play?username=<%= username %>&apikey=<%= key %>&nome=pedrozz_mods">Play</a>
-<a class="mdi mdi-youtube" target="_blank" href="/download/play2?username=<%= username %>&apikey=<%= key %>&nome=pedrozz_mods">Play V2</a>
-<a class="mdi mdi-youtube" target="_blank" href="/download/playvd?username=<%= username %>&apikey=<%= key %>&link=pedrozz_mods">Play Video</a>
-<a class="mdi mdi-youtube" target="_blank" href="/download/playvd2?username=<%= username %>&apikey=<%= key %>&link=pedrozz_mods">Play Video V2</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/play?username=<%= username %>&apikey=<%= key %>&nome=Redzin">Play</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/play2?username=<%= username %>&apikey=<%= key %>&nome=Redzin">Play V2</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/playvd?username=<%= username %>&apikey=<%= key %>&link=Redzin">Play Video</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/playvd2?username=<%= username %>&apikey=<%= key %>&link=Redzin">Play Video V2</a>
 <a class="mdi mdi-youtube" target="_blank" href="/download/ytmp3?username=<%= username %>&apikey=<%= key %>&link=">Ytbmp3</a>
 <a class="mdi mdi-youtube" target="_blank" href="/download/ytmp4?username=<%= username %>&apikey=<%= key %>&link=">Ytbmp4</a>
 <a class="mdi mdi-instagram" target="_blank" href="/api/instagram?username=<%= username %>&apikey=<%= key %>&url=https://www.instagram.com/reel/C7fj6UJI3C-/?igsh=Y3FocnFnam5uYXht">Instagram VD/AD</a>
@@ -825,7 +825,7 @@ font-size: 22px;
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/goldtext?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Goldtext </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/starballons?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Starballons </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/ffavatar?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Ffavatar </a>
-<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/ffbanner?texto=Redzin-Api&texto2=pedrozz_Mods&username=<%= username %>&apikey=<%= key %>">Ffbanner </a>
+<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/ffbanner?texto=Redzin-Api&texto2=Redzin&username=<%= username %>&apikey=<%= key %>">Ffbanner </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/mascotegame?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Mascotegame </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/mascoteavatar?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Mascoteavatar </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/wingeffect?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Wingeffect </a>
@@ -847,7 +847,7 @@ font-size: 22px;
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/florwooden?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Florwooden </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/madeira?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Madeira </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/gameplay?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Gameplay </a>
-<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/googlesg?texto=Redzin-Api&texto2=redzin api a melhor&texto3= pedrozz_Mods&username=<%= username %>&apikey=<%= key %>">Googlesg </a>
+<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/googlesg?texto=Redzin-Api&texto2=redzin api a melhor&texto3= Redzin&username=<%= username %>&apikey=<%= key %>">Googlesg </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/neon2?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Neon2 </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/lobometal?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Lobometal </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/harryp?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Harry Potter </a>
@@ -861,7 +861,7 @@ font-size: 22px;
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/shadow-sky?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Shadow-Sky </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/metallic?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Metallic </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/naruto?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Naruto </a>
-<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/pubg?texto=Redzin-Api&texto2=pedrozz_Mods&username=<%= username %>&apikey=<%= key %>">Pubg </a>
+<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/pubg?texto=Redzin-Api&texto2=Redzin&username=<%= username %>&apikey=<%= key %>">Pubg </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/under-grass?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Under-Grass </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/flower-typography?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Flower-Typography </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/picture-of-love?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Picture Of Love </a>
@@ -909,10 +909,10 @@ font-size: 22px;
 <a class="sub-btn"><i class='mdi mdi-cube-outline'></i>OUTROS<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 <a class="mdi mdi-cube-outline" target="_blank" href="/api/metadinha?username=<%= username %>&apikey=<%= key %>">Metadinha</a>
-<a class="mdi mdi-cube-outline" target="_blank" href="/api/letras?nome=pedrozz&username=<%= username %>&apikey=<%= key %>">Letras Diferentes</a>
+<a class="mdi mdi-cube-outline" target="_blank" href="/api/letras?nome=Redzin&username=<%= username %>&apikey=<%= key %>">Letras Diferentes</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/api/tempo?city=sao%20paulo&username=<%= username %>&apikey=<%= key %>">Clima</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/api/printsite?url=&username=<%= username %>&apikey=<%= key %>">Print Site</a>
-<a class="mdi mdi-cube-outline" target="_blank" href="/creator/qr-code?username=<%= username %>&apikey=<%= key %>&texto=pedrozzMods">Creator Qr-Code</a>
+<a class="mdi mdi-cube-outline" target="_blank" href="/creator/qr-code?username=<%= username %>&apikey=<%= key %>&texto=RedzinMods">Creator Qr-Code</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/creator/img?frase=O que nao nos mata nos fortalece&autor=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Creator Img-Frase</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/fr/frases?username=<%= username %>&apikey=<%= key %>">Frases aleatória</a>
 </div>
@@ -1003,8 +1003,8 @@ font-size: 22px;
 <div class="card-body">
 <h5 class="font-weight-bold text-danger text-uppercase"></h5>
 <div class="center-image">
-<a href="/perfil" alt="pedrozz: criador">
-<img class="round-image" src="<%= photoLink %>" alt="by Pedrozz">
+<a href="/perfil" alt="Redzin: criador">
+<img class="round-image" src="<%= photoLink %>" alt="by Redzin">
 </a>
 </div>  
 <br>
@@ -1016,8 +1016,8 @@ font-size: 22px;
 </br>
 <% if (user.adm === 'sim') { %>
 <div class="verimg">
-<a href="/perfil" alt="pedrozz: criador">
-<span style="color: green;">Administrador .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Pedrozz">
+<a href="/perfil" alt="Redzin: criador">
+<span style="color: green;">Administrador .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Redzin">
 </a>
 </div>  
   <% } else { %>
@@ -1114,7 +1114,7 @@ Instagram
             <% if (user.premium === 'sim') { %>
             <div class="verimg">
               <a href="/perfil" alt="<%= user.username %>: criador">
-                <span style="color: green;">PREMIUM .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Pedrozz">
+                <span style="color: green;">PREMIUM .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Redzin">
               </a>
             </div>  
             <% } else { %>
