--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
    <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
-    <title>Redzin - Apis</title>
+    <title>Dark - Apis</title>
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap");
 
@@ -492,12 +492,12 @@ font-size: 22px;
 --->
 
 <div class="center-image">
-<a href="#" alt="Redzin: criador">
-<img class="round-image" src="https://telegra.ph/file/0277179fcb6fe1bd054ca.jpg" alt="by Redzin">
+<a href="#" alt="pedrozz: criador">
+<img class="round-image" src="https://telegra.ph/file/0277179fcb6fe1bd054ca.jpg" alt="by Pedrozz">
 </a>
 </div>
 <center>
-  <i class="Redzin">REDZIN - API</i>
+  <i class="darkin">DARK - API</i>
 </center>
 
 <br></br>
@@ -507,7 +507,7 @@ font-size: 22px;
             <div class="col-lg-10">
             <center>
 <h1 class="display-4 fw-bold" data-aos="fad-up">
-SEJAM BEM VINDO<span class="text-brand"> A REDZIN API</span> 
+SEJAM BEM VINDO<span class="text-brand"> A DARK API</span> 
 </h1>
 <h3 id="text"></h3>
 <div data-aos="fade-up" data-aos-delay="600">
@@ -531,58 +531,7 @@ class="btn btn-brand me-3"
 <span></span>
 <span></span>
 <span></span>
-DASHBOARD</a>
-
-<a
-href="https://whatsapp.com/channel/0029Vacq6e0IXnlniRvdFe2a"
-target="_blank"
-class="btn btn-brand me-3"
->
-<span></span>
-<span></span>
-<span></span>
-<span></span>
-CANAL</a>
-</div>
-</center>
-            </div>
-          </div>
-        </div>
-      </section>
-
-<section id="services" class="full-height px-lg-5">
-<div class="container">
-<div class="row pb-4" data-aos="fade-up">
-<div class="col-lg-8">
-<center>
-<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORES<span class="text-brand"></span> 
-</h1>
-<center>
-</div>
-</div>
-
-<div class="row gy-4">
-<div class="col-md-4" data-aos="fade-up">
-<div class="service p-4 bg-base rounded-4 shadow-effect">
-<div class="iconbox rounded-4">
-<i class="mdi mdi-instagram"></i>
-</div>
-<h5 class="mt-4 mb-2">Redzin</h5>
-<p>Faça O Seu Melhor Mesmo Em Fases Ruins.</p>
-<center><a class="btn" href="/valores">
-<span></span>
-<span></span>
-<span></span>
-<span></span>
-Instagram
-</a> </center>
-</div>
-</div>
-
-</div>
-</div>
-</section>
-      
+DASHBOARD</a>    
 <section id="services" class="full-height px-lg-5">
 <div class="container">
 <div class="row pb-4" data-aos="fade-up">
@@ -648,7 +597,7 @@ Adquir Plano Adm
           <div class="row pb-4" data-aos="fade-up">
           <center>
             <div class="col-lg-8">
-              <h1>BOTS DA COMUNIDADE REDZIN API</h1>
+              <h1>BOTS DA COMUNIDADE DARK STARS</h1>
             </div>
           </div>
           </center>
@@ -664,14 +613,14 @@ Adquir Plano Adm
                   />
                 </div>
                 <div class="card-custom-content p-4">
-          <center><h4>KUROMI V4</h4></center>
-          <center><p>KUROMI V4 É A Nova Atualização Da Kuromi Bot, Uma Bot 100% Atualizada Para Você.✨🤗</p><center>
- <center><a class="btn" href="https://wa.me/5512988255401/?text=Olá Gostaria De Obter A Kuromi.">
+          <center><h4>LAURA PRIVAT - Bot NodeJS</h4></center>
+          <center><p>Laura Privat é um bot de whatsapp desenvolvido por: Pedrozz_Mods é foi criada com o intuito de trazer diversão e segurança para seu grupo, contendo brincadeiras, segurança, inteligência artificial e diversão para seu grupo, qualquer coisa consulte o criador no botão a baixo✨🤗</p><center>
+ <center><a class="btn" href="https://wa.me/556199317165/?text=Olá gostaria de ver os preços da laura privat">
 <span></span>
 <span></span>
 <span></span>
 <span></span>
-Obter Agora
+Comprar Agora
 </a> </center>
                 </div>
               </div>
@@ -688,14 +637,14 @@ Obter Agora
                   />
                 </div>
                 <div class="card-custom-content p-4">
-<center><h4>Billie</h4></center>
- <center><p> Billie É Uma Bot Incrivel E Super Rápida Para Seu Uso✨🤗</p> </center>
- <center><a class="btn" href="https://wa.me/5514991405873/?text=Olá Gostaria De Alugar A Billie">
+<center><h4>ELLIE - Bot NodeJS</h4></center>
+ <center><p> Ellie Bot é um bot desenvolvido por Ritinha, projetado para interagir de maneira amigável e eficiente com os usuários. Tem jogos e alguns sistemas bem legais!, qualquer coisa consulte o criador no botão a baixo✨🤗</p> </center>
+ <center><a class="btn" href="https://wa.me/55389820-6779/?text=Olá gostaria de ver os preços da Ellie bot">
 <span></span>
 <span></span>
 <span></span>
 <span></span>
-Obter Agora
+Comprar Agora
 </a> </center>
                   <class class="card-custom-buttons">
                   </class>
@@ -713,9 +662,9 @@ Obter Agora
                   />
                 </div>
                 <div class="card-custom-content p-4">
-<center><h4>Cebola</h4></center>
- <center><p> Cebola É Um Bot Incrivel E Super Rápido Para Seu Uso✨🤗</p> </center>
- <center><a class="btn" href="https://wa.me/557186601260/?text=Olá Gostaria De Alugar O Cebola">
+<center><h4>Bartolomeu - Bot NodeJS</h4></center>
+ <center><p> Bartolomeu bot é o mais novo bot criado pela DARK STARS COMMUNITY ele é bem completo e já contem nossas apis nele precisando apenas que você adicione sua key!!, qualquer coisa consulte algum adm da comunidade no botão a baixo✨🤗</p> </center>
+ <center><a class="btn" href="https://chat.whatsapp.com/He2LRVtIwTK45wH4M1J18w">
 <span></span>
 <span></span>
 <span></span>
@@ -740,7 +689,7 @@ Comunidade
                 </div>
                 <div class="card-custom-content p-4">
 <center><h4>Novidades</h4></center>
- <center><p> Qualquer Novidade Será Postada Aqui 🪐</p> </center>
+ <center><p> Qualquer tipo de novidades serão postados na comunidade ou por aqui mesmo 🌹</p> </center>
 
 
                   <class class="card-custom-buttons">
@@ -755,7 +704,7 @@ Comunidade
                <br></br><br></br><br></br><br></br>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-              <h2><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2024 REDZIN API</span></h3>
+              <h2><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2024 Dark Stars</span></h3>
               </div>
                </footer>   
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -782,7 +731,7 @@ $('.menu-btn').css("visibility", "visible");
     </script>
     <script>
 const textElement = document.getElementById('text');
-const phrases = ['Bem-Vindo❤', 'Em Desenvolvimento...'];
+const phrases = ['Bem-Vindo🌹', 'Ainda estamos em desenvolvimento⚙️', 'Explore nossas opções.', 'Obrigado por usar nossa api🥰', 'rest api by dark stars🤗','esplore a sua criatividade na nossa api👩‍💻','estamos sempre trazendo o melhor conteudo para voce🙅','Ficamos felizes de te ver aqui','A comunidade Dark Stars sempre está evoluindo 🤑','Todos os direitos reservados a Pedrozz_Mods,Ritinha🔥'];
 let phraseIndex = 0;
 let letterIndex = 0;
 
