--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -1052,7 +1052,7 @@ VALORES
 <div class="row pb-4" data-aos="fade-up">
 <div class="col-lg-8">
 <center>
-<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORES<span class="text-brand"></span> 
+<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADOR<span class="text-brand"></span> 
 </h1>
 <center>
 </div>
@@ -1062,17 +1062,17 @@ VALORES
 <div class="col2-md-4" data-aos="fade-up">
 <div class="tutotxt">
 <div class="iconbox rounded-4">
-<i class="mdi mdi-youtube"></i>
+<i class="mdi mdi-instagram"></i>
 </div>
-<center><h4 class="mt-4 mb-2" style="font-family: fantasy;">Pedrozz_Mods</h4></center>
-<p style=" font-family: 'Kaushan Script', cursive;">Se você caminha sozinho, você vai mais rápido Se vocês caminharem juntos, vocês irão mais longe</p>
+<center><h4 class="mt-4 mb-2" style="font-family: fantasy;">Redzin</h4></center>
+<p style=" font-family: 'Kaushan Script', cursive;">Faça Por Você.</p>
 <center>
-<a class="btn" href="https://youtube.com/@pedrozz_mods?si=Uy0yd5FsOsagRLKW">
+<a class="btn" href="https://instagram/@redzinyz">
 <span></span>
 <span></span>
 <span></span>
 <span></span>
-Canal
+instagram
 </a>
 </center>
 </div>
@@ -1083,10 +1083,10 @@ Canal
 <div class="iconbox rounded-4">
 <i class="mdi mdi-youtube"></i>
 </div>
-<center><h4 class="mt-4 mb-2" style="font-family: fantasy;">Ritinha/Arcanja</h4></center>
-<p style=" font-family: 'Kaushan Script', cursive;">Primeiro amarás o Corinthians e só assim então poderá amar outro alguém!
+<center><h4 class="mt-4 mb-2" style="font-family: fantasy;">RedzinYT</h4></center>
+<p style=" font-family: 'Kaushan Script', cursive;">Love Heals
 </p>
-<center><a class="btn" href="https://youtube.com/@ritinha_bots?si=1rFxLDwpaywis2a_">
+<center><a class="btn" href="https://youtube.com/@Redzin">
 <span></span>
 <span></span>
 <span></span>
