--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
    <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
   
-    <title>Dark - Apis</title>
+    <title>REDZIN API</title>
     <style>
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&display=swap");
 
@@ -492,12 +492,12 @@ font-size: 22px;
 --->
 
 <div class="center-image">
-<a href="#" alt="pedrozz: criador">
-<img class="round-image" src="https://telegra.ph/file/0277179fcb6fe1bd054ca.jpg" alt="by Pedrozz">
+<a href="#" alt="Redzin: criador">
+<img class="round-image" src="https://telegra.ph/file/6be8c83b9c3d91735df0f.jpg" alt="by Redzin">
 </a>
 </div>
 <center>
-  <i class="darkin">DARK - API</i>
+  <i class="darkin">REDZIN - API</i>
 </center>
 
 <br></br>
@@ -507,13 +507,13 @@ font-size: 22px;
             <div class="col-lg-10">
             <center>
 <h1 class="display-4 fw-bold" data-aos="fad-up">
-SEJAM BEM VINDO<span class="text-brand"> A DARK API</span> 
+SEJAM BEM VINDO<span class="text-brand"> A REDZIN API</span> 
 </h1>
 <h3 id="text"></h3>
 <div data-aos="fade-up" data-aos-delay="600">
           
 <a
-href="https://chat.whatsapp.com/He2LRVtIwTK45wH4M1J18w"
+href="https://chat.whatsapp.com/He2LRVtIwTK45wH4Mw"
 target="_blank"
 class="btn btn-brand me-3"
 >
@@ -531,7 +531,74 @@ class="btn btn-brand me-3"
 <span></span>
 <span></span>
 <span></span>
-DASHBOARD</a>    
+DASHBOARD</a>
+
+<a
+href="https://whatsapp.com/channel/0029Vacq6elniRvdFe2a"
+target="_blank"
+class="btn btn-brand me-3"
+>
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+CANAL</a>
+</div>
+</center>
+            </div>
+          </div>
+        </div>
+      </section>
+
+<section id="services" class="full-height px-lg-5">
+<div class="container">
+<div class="row pb-4" data-aos="fade-up">
+<div class="col-lg-8">
+<center>
+<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORES<span class="text-brand"></span> 
+</h1>
+<center>
+</div>
+</div>
+
+<div class="row gy-4">
+<div class="col-md-4" data-aos="fade-up">
+<div class="service p-4 bg-base rounded-4 shadow-effect">
+<div class="iconbox rounded-4">
+<i class="mdi mdi-youtube"></i>
+</div>
+<h5 class="mt-4 mb-2">Redzin</h5>
+<p>Sua Fé É O Combustível Que Te Leva Ao Caminho Da Vitória</p>
+<center><a class="btn" href="/valores">
+<span></span>
+<span></span>
+<span></span>
+<span></span>
+Instagram
+</a> </center>
+</div>
+</div>
+
+<div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+<div class="service p-4 bg-base rounded-4 shadow-effect">
+<div class="iconbox rounded-4">
+<i class="mdi mdi-youtube"></i>
+</div>
+<h5 class="mt-4 mb-2"></h5>
+<p>Primeiro amarás o Corinthians e só assim então poderá amar outro alguém!
+</p>
+<center><a class="btn" href="/valores">
+<span></span>
+<span></span>
+<span></span>
+<span></span>Canal</a> </center>
+</div>
+</div>
+
+</div>
+</div>
+</section>
+      
 <section id="services" class="full-height px-lg-5">
 <div class="container">
 <div class="row pb-4" data-aos="fade-up">
@@ -597,7 +664,7 @@ Adquir Plano Adm
           <div class="row pb-4" data-aos="fade-up">
           <center>
             <div class="col-lg-8">
-              <h1>BOTS DA COMUNIDADE DARK STARS</h1>
+              <h1>BOTS DA COMUNIDADE</h1>
             </div>
           </div>
           </center>
@@ -608,14 +675,14 @@ Adquir Plano Adm
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="https://telegra.ph/file/f5cb7615bcdf2ccb12fc3.jpg"
+                    src="https://telegra.ph/file/e0cf5a702c197bd89bed0.jpg"
                     alt=""
                   />
                 </div>
                 <div class="card-custom-content p-4">
-          <center><h4>LAURA PRIVAT - Bot NodeJS</h4></center>
-          <center><p>Laura Privat é um bot de whatsapp desenvolvido por: Pedrozz_Mods é foi criada com o intuito de trazer diversão e segurança para seu grupo, contendo brincadeiras, segurança, inteligência artificial e diversão para seu grupo, qualquer coisa consulte o criador no botão a baixo✨🤗</p><center>
- <center><a class="btn" href="https://wa.me/556199317165/?text=Olá gostaria de ver os preços da laura privat">
+          <center><h4>BILLIE - Bot NodeJS</h4></center>
+          <center><p>Clique Aqui Para Alugar A Billie Eilish✨🤗</p><center>
+ <center><a class="btn" href="https://wa.me/5514991405873/?text=Olá Dostaria De Adquirir A Billie">
 <span></span>
 <span></span>
 <span></span>
@@ -632,14 +699,14 @@ Comprar Agora
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="https://telegra.ph/file/f5166869171006766389c.jpg"
+                    src="https://telegra.ph/file/b381ddb2d091c4b90d157.jpg"
                     alt=""
                   />
                 </div>
                 <div class="card-custom-content p-4">
-<center><h4>ELLIE - Bot NodeJS</h4></center>
- <center><p> Ellie Bot é um bot desenvolvido por Ritinha, projetado para interagir de maneira amigável e eficiente com os usuários. Tem jogos e alguns sistemas bem legais!, qualquer coisa consulte o criador no botão a baixo✨🤗</p> </center>
- <center><a class="btn" href="https://wa.me/55389820-6779/?text=Olá gostaria de ver os preços da Ellie bot">
+<center><h4>CEBOLA - Bot NodeJS</h4></center>
+ <center><p> Clique Aqui Para Adquirir O Cebola✨🤗</p> </center>
+ <center><a class="btn" href="https://wa.me/557186601260/?text=Olá Gostaria De Adquirir O Cebola">
 <span></span>
 <span></span>
 <span></span>
@@ -657,14 +724,14 @@ Comprar Agora
                 <div class="card-custom-image rounded-4">
                   <img
                     class="rounded-4"
-                    src="https://telegra.ph/file/c6b253f5a2854de4cd464.jpg"
+                    src="https://telegra.ph/file/edc73dbac807446f07e38.jpg"
                     alt=""
                   />
                 </div>
                 <div class="card-custom-content p-4">
-<center><h4>Bartolomeu - Bot NodeJS</h4></center>
- <center><p> Bartolomeu bot é o mais novo bot criado pela DARK STARS COMMUNITY ele é bem completo e já contem nossas apis nele precisando apenas que você adicione sua key!!, qualquer coisa consulte algum adm da comunidade no botão a baixo✨🤗</p> </center>
- <center><a class="btn" href="https://chat.whatsapp.com/He2LRVtIwTK45wH4M1J18w">
+<center><h4>Marília - Bot NodeJS</h4></center>
+ <center><p> Olá, Gostaria De Adquirir A Marilia✨🤗</p> </center>
+ <center><a class="btn" href="https://wa.me/5512988255401/?text=Olá Gostaria De Adquirir A Marília">
 <span></span>
 <span></span>
 <span></span>
@@ -689,7 +756,7 @@ Comunidade
                 </div>
                 <div class="card-custom-content p-4">
 <center><h4>Novidades</h4></center>
- <center><p> Qualquer tipo de novidades serão postados na comunidade ou por aqui mesmo 🌹</p> </center>
+ <center><p> Qualquer Bovidades Serão Postados Aqui 🪐</p> </center>
 
 
                   <class class="card-custom-buttons">
@@ -704,7 +771,7 @@ Comunidade
                <br></br><br></br><br></br><br></br>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-              <h2><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2024 Dark Stars</span></h3>
+              <h2><span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2024 REDZIN API</span></h3>
               </div>
                </footer>   
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -731,7 +798,7 @@ $('.menu-btn').css("visibility", "visible");
     </script>
     <script>
 const textElement = document.getElementById('text');
-const phrases = ['Bem-Vindo🌹', 'Ainda estamos em desenvolvimento⚙️', 'Explore nossas opções.', 'Obrigado por usar nossa api🥰', 'rest api by dark stars🤗','esplore a sua criatividade na nossa api👩‍💻','estamos sempre trazendo o melhor conteudo para voce🙅','Ficamos felizes de te ver aqui','A comunidade Dark Stars sempre está evoluindo 🤑','Todos os direitos reservados a Pedrozz_Mods,Ritinha🔥'];
+const phrases = ['Bem-Vindo❤', 'Ainda Emm Desenvolvimento⚙️'];
 let phraseIndex = 0;
 let letterIndex = 0;
 
