--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -410,7 +410,7 @@ background-color: Silver;
 <body>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-<h6><span style="color: red;">Dark Api</span></h6>
+<h6><span style="color: red;">REDZIN API</span></h6>
               </div>
                </footer>          
   <!--SIDER BAR A BAIXO--->
@@ -431,11 +431,11 @@ background-color: Silver;
 <div class="txt">
 <div class="center-image">
 <a href="#" alt="Redzin: criador">
-<img class="round-image" src="https://telegra.ph/file/70b6da147083ab19786e9.jpg" alt="by Redzin">
+<img class="round-image" src="http://telegra.ph/file/6be8c83b9c3d91735df0f.jpg" alt="by Redzin">
 </a>
 </div>
 <center>
-  <i class="darkin">DARK - API</i>
+  <i class="darkin">REDZIN API</i>
 </center>
 
 
@@ -451,8 +451,8 @@ background-color: Silver;
 <div class="item">
 <a class="sub-btn"><i class='mdi mdi-shield-crown'></i><i class="sup">CRÉDITOS/SUPORTE</i><i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
-<a class="mdi mdi-whatsapp" href="http://wa.me/556199317165">Grupo</a>
-<a class="mdi mdi-youtube" href="https://instagram/@redzinyz">CanalP</a>
+<a class="mdi mdi-whatsapp" href="http://wa.me/5512988255401">WhatsApp</a>
+<a class="mdi mdi-youtube" href="https://instagram.com/@redzinyz">CanalP</a>
 
 </div>
 </div>
@@ -557,7 +557,7 @@ background-color: Silver;
               <br></br><br></br><br></br><br></br>
                 <footer class="footer">
               <div class="d-sm-flex justify-content-center justify-content-sm-between">
-<h5>Copyright © 2024 <span style="color: red;">Dark Stars</span></h5>
+<h5>Copyright © 2024 <span style="color: red;">REDZIN API</span></h5>
               </div>
                </footer>          
                              <script type="text/javascript">
