--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -452,7 +452,7 @@ background-color: Silver;
 <a class="sub-btn"><i class='mdi mdi-shield-crown'></i><i class="sup">CRÉDITOS/SUPORTE</i><i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 <a class="mdi mdi-whatsapp" href="http://wa.me/5512988255401">WhatsApp</a>
-<a class="mdi mdi-youtube" href="https://instagram.com/@redzinyz">CanalP</a>
+<a class="mdi mdi-youtube" href="https://instagram.com/@redzinyz">Instagram</a>
 
 </div>
 </div>
