--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -278,14 +278,14 @@
               margin: 5px;
             }
 
-            .pedrozz{
+            .Redzin{
             color: black;
             }
-            .pedrozz2{
+            .Redzin2{
             color: #000000;
 
             }
-            .pedrozz3{
+            .Redzin3{
             color: #000000;
 
             }
@@ -734,8 +734,8 @@ font-size: 22px;
 <div class="txt">
 <!----
 <div class="sidercenter">
-<a href="#" alt="pedrozz: criador">
-<img class="round-image" src="https://j.top4top.io/p_3068vk6ci0.gif" alt="by Pedrozz">
+<a href="#" alt="Redzin: criador">
+<img class="round-image" src="https://j.top4top.io/p_3068vk6ci0.gif" alt="by Redzin">
 </a>
 </div>
 ----->
@@ -750,10 +750,10 @@ font-size: 22px;
 <a class="sub-btn"><i class='fa fa-download'></i>DOWLOADS<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 
-<a class="mdi mdi-youtube" target="_blank" href="/download/play?username=<%= username %>&apikey=<%= key %>&nome=pedrozz_mods">Play</a>
-<a class="mdi mdi-youtube" target="_blank" href="/download/play2?username=<%= username %>&apikey=<%= key %>&nome=pedrozz_mods">Play V2</a>
-<a class="mdi mdi-youtube" target="_blank" href="/download/playvd?username=<%= username %>&apikey=<%= key %>&link=pedrozz_mods">Play Video</a>
-<a class="mdi mdi-youtube" target="_blank" href="/download/playvd2?username=<%= username %>&apikey=<%= key %>&link=pedrozz_mods">Play Video V2</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/play?username=<%= username %>&apikey=<%= key %>&nome=Redzin">Play</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/play2?username=<%= username %>&apikey=<%= key %>&nome=Redzin">Play V2</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/playvd?username=<%= username %>&apikey=<%= key %>&link=Redzin">Play Video</a>
+<a class="mdi mdi-youtube" target="_blank" href="/download/playvd2?username=<%= username %>&apikey=<%= key %>&link=Redzin">Play Video V2</a>
 <a class="mdi mdi-youtube" target="_blank" href="/download/ytmp3?username=<%= username %>&apikey=<%= key %>&link=">Ytbmp3</a>
 <a class="mdi mdi-youtube" target="_blank" href="/download/ytmp4?username=<%= username %>&apikey=<%= key %>&link=">Ytbmp4</a>
 <a class="mdi mdi-instagram" target="_blank" href="/api/instagram?username=<%= username %>&apikey=<%= key %>&url=https://www.instagram.com/reel/C7fj6UJI3C-/?igsh=Y3FocnFnam5uYXht">Instagram VD/AD</a>
@@ -825,7 +825,7 @@ font-size: 22px;
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/goldtext?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Goldtext </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/starballons?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Starballons </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/ffavatar?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Ffavatar </a>
-<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/ffbanner?texto=Redzin-Api&texto2=pedrozz_Mods&username=<%= username %>&apikey=<%= key %>">Ffbanner </a>
+<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/ffbanner?texto=Redzin-Api&texto2=Redzin&username=<%= username %>&apikey=<%= key %>">Ffbanner </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/mascotegame?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Mascotegame </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/mascoteavatar?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Mascoteavatar </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/wingeffect?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Wingeffect </a>
@@ -847,7 +847,7 @@ font-size: 22px;
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/florwooden?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Florwooden </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/madeira?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Madeira </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/gameplay?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Gameplay </a>
-<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/googlesg?texto=Redzin-Api&texto2=redzin api a melhor&texto3= pedrozz_Mods&username=<%= username %>&apikey=<%= key %>">Googlesg </a>
+<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/googlesg?texto=Redzin-Api&texto2=redzin api a melhor&texto3= Redzin&username=<%= username %>&apikey=<%= key %>">Googlesg </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/neon2?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Neon2 </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/lobometal?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Lobometal </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/harryp?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Harry Potter </a>
@@ -861,7 +861,7 @@ font-size: 22px;
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/shadow-sky?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Shadow-Sky </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/metallic?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Metallic </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/naruto?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Naruto </a>
-<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/pubg?texto=Redzin-Api&texto2=pedrozz_Mods&username=<%= username %>&apikey=<%= key %>">Pubg </a>
+<a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/pubg?texto=Redzin-Api&texto2=Redzin&username=<%= username %>&apikey=<%= key %>">Pubg </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/under-grass?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Under-Grass </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/flower-typography?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Flower-Typography </a>
 <a class="mdi mdi-image-edit" target="_blank" href="api/photooxy/picture-of-love?texto=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Picture Of Love </a>
@@ -909,10 +909,10 @@ font-size: 22px;
 <a class="sub-btn"><i class='mdi mdi-cube-outline'></i>OUTROS<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
 <a class="mdi mdi-cube-outline" target="_blank" href="/api/metadinha?username=<%= username %>&apikey=<%= key %>">Metadinha</a>
-<a class="mdi mdi-cube-outline" target="_blank" href="/api/letras?nome=pedrozz&username=<%= username %>&apikey=<%= key %>">Letras Diferentes</a>
+<a class="mdi mdi-cube-outline" target="_blank" href="/api/letras?nome=Redzin&username=<%= username %>&apikey=<%= key %>">Letras Diferentes</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/api/tempo?city=sao%20paulo&username=<%= username %>&apikey=<%= key %>">Clima</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/api/printsite?url=&username=<%= username %>&apikey=<%= key %>">Print Site</a>
-<a class="mdi mdi-cube-outline" target="_blank" href="/creator/qr-code?username=<%= username %>&apikey=<%= key %>&texto=pedrozzMods">Creator Qr-Code</a>
+<a class="mdi mdi-cube-outline" target="_blank" href="/creator/qr-code?username=<%= username %>&apikey=<%= key %>&texto=RedzinMods">Creator Qr-Code</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/creator/img?frase=O que nao nos mata nos fortalece&autor=Redzin-Api&username=<%= username %>&apikey=<%= key %>">Creator Img-Frase</a>
 <a class="mdi mdi-cube-outline" target="_blank" href="/fr/frases?username=<%= username %>&apikey=<%= key %>">Frases aleatória</a>
 </div>
@@ -931,7 +931,7 @@ font-size: 22px;
 <a class="mdi mdi-robot-happy" target="_blank" href="/api/turbo?text=bom diaa&username=<%= username %>&apikey=<%= key %>">Turbo </a>
 <a class="mdi mdi-robot-happy" target="_blank" href="api/transcrever?link=https://e.top4top.io/m_3067808xg0.mp3&username=<%= username %>&apikey=<%= key %>">Transcrever</a>
 <a class="mdi mdi-robot-happy" target="_blank" href="api/gtts?ling=pt&text=redzin api a melhor que tem heheh&username=<%= username %>&apikey=<%= key %>">Gtts</a>
-<a class="mdi mdi-robot-happy" target="_blank" href="/chatPedrozz">Chat ia</a>
+<a class="mdi mdi-robot-happy" target="_blank" href="/chatRedzin">Chat ia</a>
 </div>
 </div>
 
@@ -940,9 +940,9 @@ font-size: 22px;
 <div class="item">
 <a class="sub-btn"><i class='mdi mdi-robot-happy'></i>BOTS/TUTORIAIS<i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
-<a class="mdi mdi-robot-happy" target="_blank" href="https://youtu.be/KkGfziIFiFo?si=LC2-IDDdLnS6fAWf">Bartolomeu Bot</a>
+<a class="mdi mdi-robot-happy" target="_blank" href=wa.me/5514991405873">Billie</a>
 
-<a class="mdi mdi-robot-happy" target="_blank" href="https://youtu.be/otzzTmcNN8A?si=95sNx5prfTNE5r09">Base Bot</a>
+<a class="mdi mdi-robot-happy" target="_blank" href="https://wa.me/557186601260">Cebolinha</a>
 <a class="mdi mdi-brain" target="_blank" href="https://youtu.be/AbLfy3Msdno">Cmd Audio</a>
 <a class="mdi mdi-brain" target="_blank" href="https://youtu.be/8NkETIA3alY">Cmd documento</a>
 <a class="mdi mdi-brain" target="_blank" href="https://youtu.be/ZwNttr5pEiM">Cmd Meme</a>
@@ -967,10 +967,8 @@ font-size: 22px;
 <div class="item">
 <a class="sub-btn"><i class='mdi mdi-shield-crown'></i><i class="sup">CRÉDITOS/SUPORTE</i><i class="fas fa-angle-right dropdown"></i></a>
 <div class="sub-menu">
-<a class="mdi mdi-whatsapp" href="https://wa.me/556199317165/?text=Olá gostaria de suporte na api">Número</a>
-<a class="mdi mdi-whatsapp" href="https://chat.whatsapp.com/He2LRVtIwTK45wH4M1J18w">Grupo</a>
-<a class="mdi mdi-youtube" href="https://www.youtube.com/@Pedrozz_Mods">Canal</a>
-<a class="mdi mdi-instagram" href="https://instagram.com/pedrozz_13755">Instagram</a>
+<a class="mdi mdi-whatsapp" href="https://wa.me/5512988255401/?text=Olá gostaria de suporte na api">Número</a>
+<a class="mdi mdi-instagram" href="https://instagram.com/redzinyz">Instagram</a>
 </div>
 </div>
 <br></br><br></br><br></br><br></br>
@@ -994,7 +992,7 @@ font-size: 22px;
 <div class="cabeca">
 <h4><span style="color: red;">Redzin - Api</span></h4>
 </div>
-<center><h1>Seja Bem-Vindo <%= user.username %>!</h1>
+<center><h1>Seja Bem Vindo <%= user.username %>!</h1>
 <i class="fa fa-heart fa-2x" style="color: #FF0040;"></i><br></certer>
                     
 
@@ -1005,8 +1003,8 @@ font-size: 22px;
 <div class="card-body">
 <h5 class="font-weight-bold text-danger text-uppercase"></h5>
 <div class="center-image">
-<a href="/perfil" alt="pedrozz: criador">
-<img class="round-image" src="<%= photoLink %>" alt="by Pedrozz">
+<a href="/perfil" alt="Redzin: criador">
+<img class="round-image" src="<%= photoLink %>" alt="by Redzin">
 </a>
 </div>  
 <br>
@@ -1018,8 +1016,8 @@ font-size: 22px;
 </br>
 <% if (user.adm === 'sim') { %>
 <div class="verimg">
-<a href="/perfil" alt="pedrozz: criador">
-<span style="color: green;">Administrador .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Pedrozz">
+<a href="/perfil" alt="Redzin: criador">
+<span style="color: green;">Administrador .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Redzin">
 </a>
 </div>  
   <% } else { %>
@@ -1030,8 +1028,8 @@ font-size: 22px;
 <h4>DATA: <%= data %></h4>
 <h4>HORA: <%= hora %></h4>              
 <br>
-<h3>OBS:<span style="color: red;">Se a Url não for tire o S do httpS 😘</span></h3>
-<p>Para editar seu perfil clique na foto na foto acima</p>
+<h3>OBS:<span style="color: red;">Se A Url Não For Tire O S De HttpS 🎠</span></h3>
+<p>Para Editar Seu Perfil Clique Na Foto Acima</p>
 <br><hr>
 <center><a class="btn" href="/valores">
 <span></span>
@@ -1052,7 +1050,7 @@ VALORES
 <div class="row pb-4" data-aos="fade-up">
 <div class="col-lg-8">
 <center>
-<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADOR<span class="text-brand"></span> 
+<h1 class="display-4 fw-bold" data-aos="fade-up">CRIADORES<span class="text-brand"></span> 
 </h1>
 <center>
 </div>
@@ -1065,32 +1063,16 @@ VALORES
 <i class="mdi mdi-instagram"></i>
 </div>
 <center><h4 class="mt-4 mb-2" style="font-family: fantasy;">Redzin</h4></center>
-<p style=" font-family: 'Kaushan Script', cursive;">Faça Por Você.</p>
+<p style=" font-family: 'Kaushan Script', cursive;">De Seu Melhor Mesmo Em Sua Pior Fase.</p>
 <center>
-<a class="btn" href="https://instagram/@redzinyz">
+<a class="btn" href="https://instagram.com/@redzinyz">
 <span></span>
 <span></span>
 <span></span>
 <span></span>
-instagram
+Instagram
 </a>
 </center>
-</div>
-</div>
-
-<div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-<div class="tutotxt">
-<div class="iconbox rounded-4">
-<i class="mdi mdi-youtube"></i>
-</div>
-<center><h4 class="mt-4 mb-2" style="font-family: fantasy;">RedzinYT</h4></center>
-<p style=" font-family: 'Kaushan Script', cursive;">Love Heals
-</p>
-<center><a class="btn" href="https://youtube.com/@Redzin">
-<span></span>
-<span></span>
-<span></span>
-<span></span>Canal</a></center>
 </div>
 </div>
 
@@ -1132,7 +1114,7 @@ instagram
             <% if (user.premium === 'sim') { %>
             <div class="verimg">
               <a href="/perfil" alt="<%= user.username %>: criador">
-                <span style="color: green;">PREMIUM .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Pedrozz">
+                <span style="color: green;">PREMIUM .</span><img class="round-image" src="https://i.top4top.io/p_306167nx30.gif" alt="by Redzin">
               </a>
             </div>  
             <% } else { %>
