--- a/docs.ejs
+++ b/docs.ejs
@@ -1028,8 +1028,8 @@ font-size: 22px;
 <h4>DATA: <%= data %></h4>
 <h4>HORA: <%= hora %></h4>              
 <br>
-<h3>OBS:<span style="color: red;">Se a Url não for tire o S do httpS 😘</span></h3>
-<p>Para editar seu perfil clique na foto na foto acima</p>
+<h3>OBS:<span style="color: red;">Se S Url Não For Tire O S Do HttpS 😘</span></h3>
+<p>Para Editar Seu Perfil Clique Na Foto Acima</p>
 <br><hr>
 <center><a class="btn" href="/valores">
 <span></span>
